Ensure slider height doesnt start collapsed

--- a/inc/css/avenue.css
+++ b/inc/css/avenue.css
@@ -572,3 +572,7 @@ div#homepage-area-e .widget {
 .pagination-links .page-numbers.dots {
     background: none;
 }
+
+#parent-slider-wrap {
+     
+}
